# ase-effect-branching-on-defects

./: .gitignore  README.md  environment.yml  postBuild  pyproject.toml  run.sh
data/samples/: airflow_interface.csv  airflow_merge_commits_interface.csv  camel_interface.csv  camel_merge_commits_interface.csv  ignite_interface.csv  ignite_merge_commits_interface.csv  kafka_interface.csv  kafka_merge_commits_interface.csv  spark_interface.csv  spark_merge_commits_interface.csv
snippets/: collect_jira_issues.py  collect_vcs_history.py  compute_stats.py  frequencies_per_week.csv
study/: collect_jira_issues.py  collect_vcs_history.py  compute_stats.py
