[tool.poetry]
name = "ase_effect_branching_on_defects"
version = "0.1.0"
description = ""
authors = ["HelgeCPH <ropf@itu.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
PyDriller = { git = "https://github.com/ishepard/pydriller", rev = "94532fcac0eddd20c364585a4cf76e97d45df4bd" }
PyGithub = "^1.55"
requests = "^2.26.0"
matplotlib = "^3.4.3"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
